--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import "care.css";
 @import "car.with.animal.css";
 @import "banner.css";
+@import "about-us.css";
 * {
   padding: 0;
   margin: 0;
