--- a/css/care.css
+++ b/css/care.css
@@ -1,6 +1,6 @@
 .care {
     text-align: center;
-    background-image: url("../img/IMG_1136.JPG");
+    background-image: url("../img/IMG_CARE.JPG");
     margin: 200px;
     line-height: 1.8;
     background-size: cover;
