--- a/css/style.scss
+++ b/css/style.scss
@@ -11,4 +11,5 @@
 @import "care.css";
 @import "car.with.animal.css";
 @import "banner.css";
+@import "about-us.css";
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
