--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 @import "../css/nullstyle";
 @import "common.css";
 @import "../css/discoveries";
-@import "../css/why-us.scss";
+@import "../css/why-us.css";
 @import "service-carousel.css";
 @import "./footer.scss";
 @import "pricing.css";
