--- a/css/why-us.css
+++ b/css/why-us.css
@@ -1,10 +1,12 @@
 .why-choose-us {
+  align-items: center;
   text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .why-choose-us h2 {
-  width: auto;
-  height: auto;
   font-weight: bold;
 }
 
@@ -25,9 +27,9 @@
 }
 
 .why-choose-us__item img {
-  color: rgb(36, 45, 49);
   width: 100px;
   height: auto;
+  margin-bottom: 10px;
 }
 
 .why-choose-us__item h3 {
