--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,38 @@ h1 {
   padding: 0;
 }
 
+/* Button UP */
+.btn-scroll-up {
+  position: fixed;
+  z-index: 100;
+  right: 12px;
+  bottom: -60px;
+  display: flex;
+  width: 40px;
+  height: 60px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid var(--footer-bg);
+  opacity: 0;
+  transition: all 0.3s;
+  background-color: var(--footer-text);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.btn-scroll-up span {
+  color: var(--footer-links-active);
+  background-color: var(--footer-text);
+  user-select: none;
+}
+
+.btn-scroll-up.show {
+  opacity: 1;
+  bottom: 0;
+}
+
 .footer__wrap-img {
   height: 100px;
 }
