--- a/css/common.css
+++ b/css/common.css
@@ -31,6 +31,7 @@
     --footer-icon-active: #3781b0;
     --footer-btn-up-bg: #fff;
     --under-circle-color: #235565;
+    --blink-text: 'red'!important;
 
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
@@ -51,4 +52,6 @@ img {
     display: block;
 }
 
-
+.highlight {
+    color: red!important;
+}
