--- a/css/style.scss
+++ b/css/style.scss
@@ -12,4 +12,5 @@
 @import "car.with.animal.css";
 @import "banner.css";
 @import "about-us.css";
+@import "../css/cat-surprise";
 /*Ваши .scss и .css нужно указать в ковычках вместо "стили_студента_номер"*/
