--- a/css/pricing.css
+++ b/css/pricing.css
@@ -71,21 +71,21 @@ p.pricing__description {
     }
 }
 
-.pricing__plan {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.pricing__carousel-plan {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
     margin-top: 30px;
     margin-bottom: 35px;
     padding-right: 15px;
     padding-left: 15px;
 }
 
-.pricing__details {
-    width: 100%;
-    max-width: 300px;
-    box-sizing: border-box;
-    margin-bottom: 20px;
+.pricing__carousel-slide {
+    background-color: var(--details-card-bg-color);
+    padding: 31px;
+    line-height: 1.5;
+    font-weight: normal;
 }
 
 .pricing__price {
@@ -163,37 +163,31 @@ ul li {
     background-color: var(--crossmark-color);
 }
 
-.pricing__details-card {
-    background-color: var(--details-card-bg-color);
-    padding: 31px;
-    line-height: 1.5;
-    font-weight: normal;
+.pricing__carousel-inner {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
 }
 
-/*
-@media (min-width: 767px;) {
-    .pricing__plan {
-        flex-direction: row;
+.pricing__carousel-plan .pricing__carousel-slide {
+    flex: 0 0 100%;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+@media (min-width: 767px) {
+    .pricing__carousel-plan .pricing__carousel-slide {
+        flex: 0 0 50%;
     }
-    .pricing__content {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+}
+
+@media (min-width: 1024px) {
+    .pricing__carousel-plan .pricing__carousel-slide {
+        flex: 0 0 33.33%;
     }
-}*/
-
-.arrow__svg-left {
-    transform: rotateY(180deg);
-    width: 100%;
-    height: 100%;
 }
 
-.arrow__svg-right {
-    width: 100%;
-    height: 100%;
-}
 
-.pricing__arrow-left, .pricing__arrow-right {
+.pricing__carousel-plan .pricing__button-left, .pricing__button-right {
     height: 24px;
     width: 24px;
     padding: 4px;
@@ -202,23 +196,34 @@ ul li {
     background-color: var(--svg-bg-arrow-mobile-color);
     margin-top: 170px;
     position:absolute;
+    border: none;
+    cursor: pointer;
 }
 
-.pricing__arrow-left {
+.pricing__carousel-plan .pricing__button-prev {
+    transform: rotateY(180deg);
+    width: 100%;
+    height: 100%;
+}
+
+.pricing__button-next {
+    width: 100%;
+    height: 100%;
+}
+
+.pricing__button-left {
     left: 20px;
     top: calc(50% - 378px);
 }
 
-.pricing__arrow-right {
-    right: 20px;
-    top: calc(50% - 378px);
+.pricing__button-right {
+   right: 20px;
+   top: calc(50% - 378px); 
 }
 
-.pricing__select-button {
+pricing__select-button {
     margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
+    display: inline-block;
 }
 
 .pricing__select-plan {
@@ -244,30 +249,8 @@ ul li {
     padding-right: 20px;
 }
 
-.pricin__select-bn-arrow {
+.pricing__select-bn-arrow {
     font-size: 0.75rem;
     font-weight: 600;
 }
 
-/* big screen*/
-a.pricing__select-plan:hover {
-    background-color: var(--select-hover-color);
-    border-color: var(--select-hover-color);
-}
-
-.pricing__arrow:hover {
-    background-color: var(--svg-bn-hover);
-}
-
-.pricing__under-circles {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
-}
-
-.pricing__under-circle {
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: var(--under-circle-color);
-}
