--- a/css/partners-carousel.css
+++ b/css/partners-carousel.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Signika:wght@600&display=swap');
-* {
+/** {
   padding: 0;
   margin: 0;
   align-items: center;
-}
+}*/
 
 .partners {
   padding-top: 50px;
