--- a/css/pricing.css
+++ b/css/pricing.css
@@ -75,14 +75,12 @@ p.pricing__description {
 
 .pricing__carousel-plan {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    align-items: center;
     position: relative;
     max-width: 1200px;
-    overflow: hidden;
-    margin-top: 30px;
-    margin-bottom: 35px;
-    padding-right: 15px;
-    padding-left: 15px;
+
+    margin: auto;
 }
 
 .pricing__carousel-slide {
@@ -197,7 +195,8 @@ ul li {
     border-radius: 50%;
     fill: var(--svg-arrow-color);
     background-color: var(--svg-bg-arrow-mobile-color);
-    margin-top: 170px;
+    /*margin-top: 170px;*/
+
     border: none;
     cursor: pointer;
 }
@@ -206,11 +205,16 @@ ul li {
     transform: rotateY(180deg);
     width: 100%;
     height: 100%;
+    z-index: 100;
+    overflow: visible!important;
+
 }
 
 .pricing__button-next {
     width: 100%;
     height: 100%;
+    z-index: 100;
+    overflow: visible!important;
 }
 
 .pricing__button-left {
