--- a/css/pricing.css
+++ b/css/pricing.css
@@ -1,300 +1,335 @@
 .pricing {
-    margin-top: 60px;
-    margin-bottom: 50px;
-    position: relative;
-
+  margin-top: 60px;
+  margin-bottom: 50px;
+  position: relative;
 }
 
 .pricing__content {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+@media (min-width: 768px) {
+  .pricing__content {
+    justify-content: space-around;
+    max-width: 750px;
+    min-height: 0;
+    overflow: hidden;
+  }
+  .pricing__info {
+    padding-left: 20px;
+  }
 }
 
 .pricing__info {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 
 h2.pricing__title {
-    color: var(--title-color);
-    font-family: "Poppins", sans-serif;
-    font-size: 0.8rem;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 1px;
+  color: var(--title-color);
+  font-family: "Poppins", sans-serif;
+  font-size: 0.8rem;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 1px;
 }
 
 h3.pricing__subtitle {
-    color: var(--subtitle-color);
-    font-size: 2.27rem;
-    line-height: normal;
-    font-family: "Signika", sans-serif;
-    font-weight: bold;
-    margin-top: 20px;
+  color: var(--subtitle-color);
+  font-size: 2.27rem;
+  line-height: normal;
+  font-family: "Signika", sans-serif;
+  font-weight: bold;
+  margin-top: 20px;
 }
 
 p.pricing__description {
-    color: var(--text-color);
-    font-size: 1.1rem;
-    font-family: "Poppins", sans-serif;
-    margin-top: 25px;
-    line-height: normal;
-    text-align: left;
+  color: var(--text-color);
+  font-size: 1.1rem;
+  font-family: "Poppins", sans-serif;
+  margin-top: 25px;
+  line-height: normal;
+  text-align: left;
 }
 
 .pricing__schedule {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .pricing__schedule-items {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .pricing__day {
-    color: var(--subtext-color);
-    font-family: "Poppins", sans-serif;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-bottom: 5px;
-    line-height: 30px;
+  color: var(--subtext-color);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+  line-height: 30px;
 }
 
 .pricing__time {
-    color: var(--time-color);
-    font-family: "Poppins", sans-serif;
-    font-size: 1.1rem;
+  color: var(--time-color);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
 }
 
 @media (min-width: 768px) {
-    .pricing__schedule-items {
-        display: grid;
-        grid-template-columns: 40% 60%;
-        align-items: baseline;
-    }
+  .pricing__schedule-items {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    align-items: baseline;
+  }
 }
 
 .pricing__carousel-plan {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    position: relative;
-    max-width: 1200px;
+  display: flex;
+  position: relative;
+  margin: auto;
+}
 
-    margin: auto;
+@media (min-width: 768px) {
+  .pricing__carousel-plan {
+    justify-content: space-around;
+  }
 }
 
 .pricing__carousel-slide {
-    background-color: var(--details-card-bg-color);
-    padding: 31px;
-    line-height: 1.5;
-    font-weight: normal;
+  background-color: var(--details-card-bg-color);
+  padding: 31px;
+  line-height: 1.5;
+  font-weight: normal;
 }
 
 .pricing__price {
-    color: var(--price-color);
-    font-size: 2.27rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: bold;
+  color: var(--price-color);
+  font-size: 2.27rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
 }
 
 .pricing__plan-title {
-    color: var(--plan-title-color);
-    font-family: "Signika", sans-serif;
-    font-size: 1.6rem;
-    margin-top: 25px;
-    font-weight: 500;
+  color: var(--plan-title-color);
+  font-family: "Signika", sans-serif;
+  font-size: 1.6rem;
+  margin-top: 25px;
+  font-weight: 500;
 }
 
 @media (min-width: 768px) {
-    .pricing__price {
-        font-size: 2.5rem;
-    }
-    .pricing__plan-title  {
-        font-size: 1.5rem;
-    }
-    .pricing__subtitle {
-        font-size: 3rem;
-    }
-    .pricing__price {
-        font-size: 2.5rem;
-    }
-    .pricing__plan-title {
-        font-size: 1.5rem;
-    }
+  .pricing__price {
+    font-size: 2.5rem;
+  }
+  .pricing__plan-title {
+    font-size: 1.5rem;
+  }
+  .pricing__subtitle {
+    font-size: 3rem;
+  }
+  .pricing__price {
+    font-size: 2.5rem;
+  }
+  .pricing__plan-title {
+    font-size: 1.5rem;
+  }
 }
 
 ul.pricing__features {
-    list-style: none;
-    padding-left: 0;
-    margin-top: 20px;
+  list-style: none;
+  padding-left: 0;
+  margin-top: 20px;
 }
 
 ul.pricing__features li {
-    padding-left: 36px;
-    margin-bottom: 16px;
-    position: relative;
+  padding-left: 36px;
+  margin-bottom: 16px;
+  position: relative;
 }
 
 ul.pricing__features li::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 20px;
-    height: 20px;
-    transform: translateY(-50%);
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 20px;
+  height: 20px;
+  transform: translateY(-50%);
 }
 
 ul li {
-    color: var(--price-features-color);
-    font-family: "Poppins", sans-serif;
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    margin-top: 20px;
+  color: var(--price-features-color);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .pricing__features-checkmark::before {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 47 44' style='background-color: %23ffffff00; max-width: 100%25' version='1.1' xml:space='preserve' x='0px' y='0px' height='100%25'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.367 39.1001 C 18.4299 39.1001 17.4952 38.7263 16.8057 37.9874 L 6.8044 27.2678 C 5.4863 25.8544 5.5635 23.6411 6.9777 22.3233 C 8.3915 21.0061 10.6066 21.0832 11.9251 22.4966 L 21.9265 33.2162 C 23.2445 34.6295 23.1674 36.8424 21.7531 38.1601 C 21.0787 38.7887 20.2216 39.1001 19.367 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.3631 39.1001 C 18.6667 39.1001 17.964 38.8932 17.3517 38.4627 C 15.7704 37.3509 15.3909 35.1684 16.5034 33.5881 L 35.5059 6.6008 C 36.6183 5.0209 38.8012 4.6407 40.3835 5.753 C 41.9637 6.8648 42.3437 9.0474 41.2312 10.6272 L 22.2288 37.6154 C 21.5475 38.5828 20.4634 39.1001 19.3631 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E") cover;
-    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 47 44' style='background-color: %23ffffff00; max-width: 100%25' version='1.1' xml:space='preserve' x='0px' y='0px' height='100%25'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.367 39.1001 C 18.4299 39.1001 17.4952 38.7263 16.8057 37.9874 L 6.8044 27.2678 C 5.4863 25.8544 5.5635 23.6411 6.9777 22.3233 C 8.3915 21.0061 10.6066 21.0832 11.9251 22.4966 L 21.9265 33.2162 C 23.2445 34.6295 23.1674 36.8424 21.7531 38.1601 C 21.0787 38.7887 20.2216 39.1001 19.367 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.3631 39.1001 C 18.6667 39.1001 17.964 38.8932 17.3517 38.4627 C 15.7704 37.3509 15.3909 35.1684 16.5034 33.5881 L 35.5059 6.6008 C 36.6183 5.0209 38.8012 4.6407 40.3835 5.753 C 41.9637 6.8648 42.3437 9.0474 41.2312 10.6272 L 22.2288 37.6154 C 21.5475 38.5828 20.4634 39.1001 19.3631 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    background-color: var(--checkmark-color);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 47 44' style='background-color: %23ffffff00; max-width: 100%25' version='1.1' xml:space='preserve' x='0px' y='0px' height='100%25'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.367 39.1001 C 18.4299 39.1001 17.4952 38.7263 16.8057 37.9874 L 6.8044 27.2678 C 5.4863 25.8544 5.5635 23.6411 6.9777 22.3233 C 8.3915 21.0061 10.6066 21.0832 11.9251 22.4966 L 21.9265 33.2162 C 23.2445 34.6295 23.1674 36.8424 21.7531 38.1601 C 21.0787 38.7887 20.2216 39.1001 19.367 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.3631 39.1001 C 18.6667 39.1001 17.964 38.8932 17.3517 38.4627 C 15.7704 37.3509 15.3909 35.1684 16.5034 33.5881 L 35.5059 6.6008 C 36.6183 5.0209 38.8012 4.6407 40.3835 5.753 C 41.9637 6.8648 42.3437 9.0474 41.2312 10.6272 L 22.2288 37.6154 C 21.5475 38.5828 20.4634 39.1001 19.3631 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
+    cover;
+  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 47 44' style='background-color: %23ffffff00; max-width: 100%25' version='1.1' xml:space='preserve' x='0px' y='0px' height='100%25'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.367 39.1001 C 18.4299 39.1001 17.4952 38.7263 16.8057 37.9874 L 6.8044 27.2678 C 5.4863 25.8544 5.5635 23.6411 6.9777 22.3233 C 8.3915 21.0061 10.6066 21.0832 11.9251 22.4966 L 21.9265 33.2162 C 23.2445 34.6295 23.1674 36.8424 21.7531 38.1601 C 21.0787 38.7887 20.2216 39.1001 19.367 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3Cg fill='currentColor'%3E%3Cpath d='M 19.3631 39.1001 C 18.6667 39.1001 17.964 38.8932 17.3517 38.4627 C 15.7704 37.3509 15.3909 35.1684 16.5034 33.5881 L 35.5059 6.6008 C 36.6183 5.0209 38.8012 4.6407 40.3835 5.753 C 41.9637 6.8648 42.3437 9.0474 41.2312 10.6272 L 22.2288 37.6154 C 21.5475 38.5828 20.4634 39.1001 19.3631 39.1001 Z' fill='currentColor'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-color: var(--checkmark-color);
 }
 
 .pricing__features-crossmark::before {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E") cover; 
-    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E");
-    background-color: var(--crossmark-color);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E")
+    cover;
+  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 1000 1000' style='enable-background: new 0 0 1000 1000; max-width: 100%25' xml:space='preserve' height='100%25'%3E%3Cpath d='M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2 c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0 c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z' fill='currentColor'%3E%3C/path%3E%3C/svg%3E");
+  background-color: var(--crossmark-color);
 }
 
 .pricing__carousel-inner {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  justify-content: space-around; /*if not to change for 768px*/
+  margin: 0 auto;
 }
 
 .pricing__carousel-plan .pricing__carousel-slide {
-    flex: 0 0 100%;
-    box-sizing: border-box;
+  flex: 0 0 100%;
+  box-sizing: border-box;
 }
 
 @media (min-width: 768px) {
-    .pricing__carousel-plan .pricing__carousel-slide {
-        flex: 0 0 50%;
-    }
+  .pricing__carousel-plan .pricing__carousel-slide {
+    flex: 0 0 84%;
+    width: 377px;
+    height: 437px;
+    padding: 31px;
+  }
 }
 
 @media (min-width: 1024px) {
-    .pricing__carousel-plan .pricing__carousel-slide {
-        flex: 0 0 33.33%;
-    }
+  .pricing__carousel-plan .pricing__carousel-slide {
+    flex: 0 0 33.33%;
+  }
 }
 
-
-.pricing__carousel-plan .pricing__button-left, .pricing__button-right {
-    height: 24px;
-    width: 24px;
-    padding: 4px;
-    border-radius: 50%;
-    fill: var(--svg-arrow-color);
-    background-color: var(--svg-bg-arrow-mobile-color);
-    /*margin-top: 170px;*/
-
-    border: none;
-    cursor: pointer;
+.pricing__carousel-plan .pricing__button-left,
+.pricing__button-right {
+  height: 24px;
+  width: 24px;
+  padding: 4px;
+  border-radius: 50%;
+  fill: var(--svg-arrow-color);
+  background-color: var(--svg-bg-arrow-mobile-color);
+  border: none;
+  cursor: pointer;
 }
 
 .pricing__carousel-plan .pricing__button-prev {
-    transform: rotateY(180deg);
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-    overflow: visible!important;
-
+  transform: rotateY(180deg);
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  overflow: visible !important;
 }
 
 .pricing__button-next {
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-    overflow: visible!important;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  overflow: visible !important;
 }
 
 .pricing__button-left {
-    left: 5px;
-    top: calc(50% - 586px);
+  left: -12px;
+  top: calc(50% - 550px);
+  position: absolute;
 }
 
 .pricing__button-right {
-   right: 5px;
-   top: calc(50% - 586px); 
+  right: -12px;
+  top: calc(50% - 550px);
+  position: absolute;
+}
+
+@media (min-width: 768px) {
+  .pricing__button-left {
+    left: 14px;
+    top: calc(50% - 17px);
+  }
+  .pricing__button-right {
+    right: 391px;
+    top: calc(50% - 17px);
+  }
+  .pricing__carousel-plan .pricing__button-left,
+  .pricing__button-right {
+    height: 32px;
+    width: 32px;
+    padding: 8px;
+  }
 }
 
 .pricing__select-button {
-    margin-top: 20px;
-    display: inline-block;
+  margin-top: 20px;
+  display: inline-block;
 }
 
 .pricing__select-plan {
-    background-color: var(--bn-select-color);
-    border: 1px solid var(--bn-select-color);
-    border-radius: 5px;
-    font-size: 0.72rem;   
-    font-family: "Poppins", sans-serif;
-    color: var(--button-text-color);
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    padding: 10px 15px;
-    margin: 10px;
-    cursor: pointer;
-    width: 9.35rem;
-    height: 2.8rem;
-    box-shadow: -3px -3px #dfdfdf, 0.5em 0.4em #dfdfdf;
-    display: inline-block;
+  background-color: var(--bn-select-color);
+  border: 1px solid var(--bn-select-color);
+  border-radius: 5px;
+  font-size: 0.72rem;
+  font-family: "Poppins", sans-serif;
+  color: var(--button-text-color);
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 15px;
+  margin: 10px;
+  cursor: pointer;
+  width: 9.35rem;
+  height: 2.8rem;
+  box-shadow: -3px -3px #dfdfdf, 0.5em 0.4em #dfdfdf;
+  display: inline-block;
 }
 
 .pricing__select-bn-content {
-    padding-right: 20px;
+  padding-right: 20px;
 }
 
 .pricing__select-bn-arrow {
-    font-size: 0.75rem;
-    font-weight: 600;
+  font-size: 0.75rem;
+  font-weight: 600;
 }
 
 /* big screen*/
 a.pricing__select-plan:hover {
-    background-color: var(--select-hover-color);
-    border-color: var(--select-hover-color);
-    text-decoration: none;
-    color: var(--button-text-color);
+  background-color: var(--select-hover-color);
+  border-color: var(--select-hover-color);
+  text-decoration: none;
+  color: var(--button-text-color);
 }
 
 .pricing__arrow:hover {
-    background-color: var(--svg-bn-hover);
+  background-color: var(--svg-bn-hover);
 }
 
 /* slideshow indicators */
 .pricing__indicators {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
-  input.pricing__indicator {
-    display: none; /* Hide the actual radio buttons */
-  }
-  
-  label {
-    width: 12px;
-    height: 12px;
-    background-color: #ccc;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: none;
-    transition: background-color 0.3s ease;
-  }
-  
-  /* Style for the selected indicator */
-  input:checked + label {
-    background-color: var(--indicator-color);
-  }
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
 
+input.pricing__indicator {
+  display: none; /* Hide the actual radio buttons */
+}
+
+label {
+  width: 12px;
+  height: 12px;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: none;
+  transition: background-color 0.3s ease;
+}
+
+/* Style for the selected indicator */
+input:checked + label {
+  background-color: var(--indicator-color);
+}
