--- a/css/why-us.css
+++ b/css/why-us.css
@@ -43,6 +43,18 @@
   text-align: center;
 }
 
+.why-choose-us__items-counter {
+  font-size: 24px;
+  margin: 10px;
+}
+
+.why-choose-us__items-warning {
+  display: none;
+  color: red;
+  font-weight: bold;
+  font-size: 18px;
+}
+
 @media only screen and (max-width: 768px) {
   .why-choose-us__items {
     grid-template-columns: repeat(2, 1fr);
