--- a/css/common.css
+++ b/css/common.css
@@ -19,6 +19,7 @@
     --crossmark-color: #6f6f72;
     --button-text-color: #fff;
     --svg-bg-color: #235565;
+    --svg-bg-color-hover: #647a81;
     --svg-bg-arrow-mobile-color: #242D31; 
     --svg-arrow-color: #fff;
     --svg-bn-hover: #235565;
