--- a/css/pricing.css
+++ b/css/pricing.css
@@ -12,6 +12,7 @@
 
 @media (min-width: 768px) {
   .pricing__content {
+    flex-direction: row;
     justify-content: space-around;
     max-width: 750px;
     min-height: 0;
@@ -21,6 +22,14 @@
     padding-left: 20px;
   }
 }
+
+/*
+@media (min-width: 992px) {
+    .pricing__content {
+        flex-direction: row;
+        
+    }
+}*/
 
 .pricing__info {
   padding-left: 15px;
@@ -61,6 +70,12 @@ p.pricing__description {
   margin-bottom: 16px;
 }
 
+@media (min-width: 992px) {
+    .pricing__schedule-items {
+        margin-bottom: 11px;
+    }
+}
+
 .pricing__day {
   color: var(--subtext-color);
   font-family: "Poppins", sans-serif;
@@ -82,6 +97,12 @@ p.pricing__description {
     grid-template-columns: 40% 60%;
     align-items: baseline;
   }
+}
+
+@media (min-width: 992px) {
+    .pricing__subtitle {
+        font-size: 3.2rem;
+    }
 }
 
 .pricing__carousel-plan {
@@ -134,6 +155,15 @@ p.pricing__description {
   .pricing__plan-title {
     font-size: 1.5rem;
   }
+}
+
+@media (min-width: 992px) {
+    .pricing__price {
+        font-size: 2.67rem;
+    }
+    .pricing__plan-title {
+        font-size: 1.6rem;
+      }
 }
 
 ul.pricing__features {
@@ -201,12 +231,6 @@ ul li {
   }
 }
 
-@media (min-width: 1024px) {
-  .pricing__carousel-plan .pricing__carousel-slide {
-    flex: 0 0 33.33%;
-  }
-}
-
 .pricing__carousel-plan .pricing__button-left,
 .pricing__button-right {
   height: 24px;
@@ -237,18 +261,21 @@ ul li {
 .pricing__button-left {
   left: -12px;
   top: calc(50% - 550px);
+  transform: translateY(-50%);
   position: absolute;
 }
 
 .pricing__button-right {
   right: -12px;
   top: calc(50% - 550px);
+  transform: translateY(-50%);
   position: absolute;
 }
 
 @media (min-width: 768px) {
   .pricing__button-left {
     left: 14px;
+    top: 50%;
     top: calc(50% - 17px);
   }
   .pricing__button-right {
@@ -260,6 +287,17 @@ ul li {
     height: 32px;
     width: 32px;
     padding: 8px;
+  }
+}
+
+@media (min-width: 992px) {
+    .pricing__carousel-plan .pricing__button-left,
+  .pricing__button-right {
+    color: var(--svg-bg-color);
+  }
+  .pricing__carousel-plan .pricing__button-left:hover,
+  .pricing__button-right:hover {
+    color: var(--svg-bg-color-hover);
   }
 }
 
