--- a/css/banner.css
+++ b/css/banner.css
@@ -36,10 +36,11 @@
   }
   
   .banner__secondblock--heading {
-    font-size: 52px;
+    font-size: 56px;
     font-family: Signika;
     color: #242D31;
     margin-bottom: 20px;
+    font-weight: bold;
 
   }
   
