--- a/css/banner.css
+++ b/css/banner.css
@@ -1,17 +1,4 @@
 /* Banner CSS */
-@media only screen and (max-width: 768px) {
-    .banner {
-        flex-direction: row; 
-        align-items: center;
-    }
-
-    .banner__text {
-        width: 50%; 
-        text-align: left; 
-        padding: 20px; 
-        margin-left:200px;
-    }
-}
 .banner {
     width: 100%;
     height: 870px;
@@ -76,4 +63,12 @@
 }
 .button__banner--pagedown:hover {
   background: lightblue;
+}
+
+@media screen and (max-width: 768px) {
+    .banner__text {
+        width: 50%;
+        text-align: left;
+        padding: 20px;
+    }
 }
