--- a/css/common.css
+++ b/css/common.css
@@ -26,6 +26,7 @@
     --details-card-bg-color: #f8fafb;
     --footer-bg: #f8fafb;
     --footer-links: rgba(35, 85, 101, 0.46);
+    --contacts-links: rgba(35, 85, 101);
     --footer-links-active: #235565;
     --footer-text: rgb(100, 122, 129);
     --footer-icon: #519ac9;
