--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,6 +1,6 @@
 .contacts {
   padding: 20px;
-  max-width: 1800px;
+  max-width: 1200px;
   margin: auto;
 }
 .contacts__commonbox {
@@ -38,7 +38,7 @@
 
 
 .contacts__form-box {
-  padding: 15px;
+  padding: 60px 70px;
   display: flex;
   justify-content: center;
   align-items: baseline;
@@ -54,12 +54,16 @@
   margin-bottom: 10px;
   text-align: center;
 }
+.contacts__form textarea {
+  height: 150px;
+  padding: 20px 30px;
+}
 
-
-.contacts__form-box-raq {
-  padding: 8px 15px; 
+.contacts .contacts__form-box-raq {
+  padding: 20px 30px;
   background-color:rgb(35, 85, 101);
   color: rgb(255, 255, 255);
+  margin-top: 56px;
 }
 
 
@@ -91,3 +95,51 @@
 border-radius: 5px;
 max-width: 100%;
 }
+.contacts .contacts__form-box-comments,
+.contacts .contacts__form-box-email,
+.contacts .contacts__form-box-tel,
+.contacts .contacts__form-box-name {
+  text-align: left;
+}
+
+.contacts .contacts__form-box-comments:active,
+.contacts .contacts__form-box-email:active,
+.contacts .contacts__form-box-tel:active,
+.contacts .contacts__form-box-name:active {
+  border: 1px solid red!important;
+}
+
+.contacts .contacts__form-box-email,
+.contacts .contacts__form-box-tel,
+.contacts .contacts__form-box-name {
+  margin-bottom: 24px;
+}
+
+.adress b{
+  display: inline-block;
+  min-width: 150px;
+  font-size: 24px;
+}
+.adress span {
+  max-width: 300px;
+  display: inline-block;
+  color:var(--footer-text);
+}
+@media (max-width: 1200px) {
+  .adress b {
+    min-width: 100%;
+    width: 100%;
+    display: block;
+  }
+}
+.contacts .contacts__form-box-name,
+.contacts .contacts__form-box-tel, 
+.contacts .contacts__form-box-email {
+  padding: 20px 30px;
+ }
+ .contacts__table {
+  margin-top: 20px;
+ }
+ .contacts__phoneandmail span a{
+  color:var(--contacts-links)
+ }
