--- a/css/contacts.css
+++ b/css/contacts.css
@@ -102,11 +102,12 @@ max-width: 100%;
   text-align: left;
 }
 
-.contacts .contacts__form-box-comments:active,
-.contacts .contacts__form-box-email:active,
-.contacts .contacts__form-box-tel:active,
-.contacts .contacts__form-box-name:active {
-  border: 1px solid red!important;
+.contacts .contacts__form-box-comments:focus,
+.contacts .contacts__form-box-email:focus,
+.contacts .contacts__form-box-tel:focus,
+.contacts .contacts__form-box-name:focus {
+  border: 1px solid red;
+  border-radius: 6px;
 }
 
 .contacts .contacts__form-box-email,
@@ -143,3 +144,23 @@ max-width: 100%;
  .contacts__phoneandmail span a{
   color:var(--contacts-links)
  }
+ .contacts .contacts__form-box-comments::placeholder,
+.contacts .contacts__form-box-email::placeholder,
+.contacts .contacts__form-box-tel::placeholder,
+.contacts .contacts__form-box-name::placeholder {
+  color: black;
+  opacity: 0.5;
+}
+@media (max-width: 992px) {
+.contacts__form-box {
+  margin-top: 50px;
+}
+}
+.contacts_clock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 114px;
+  font-size: 25px;
+}
