"sdelai nas edinin" done

--- a/css/banner.css
+++ b/css/banner.css
@@ -1,74 +1,93 @@
 /* Banner CSS */
+
 .banner {
     width: 100%;
     height: 870px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-image: url("https://res2.weblium.site/res/5f66341807730000225f82ac/5f69efd3c0c73d0021df2614");
-    background-size: cover;
-    background-position: center;
-  }
-  .banner__text{
+}
+
+.banner__text {
     width: 50%;
     text-align: left;
     padding: 20px;
     margin-left: 300px;
-  }
-  .banner__paragraph {
+}
+
+.banner__paragraph {
     margin-bottom: 20px;
     font-size: 12px;
-    font-family: Poppins;
     color: #519AC9;
-  }
-  
-  .banner__secondblock--heading {
+}
+
+.banner__secondblock--heading {
     font-size: 56px;
-    font-family: Signika;
     color: #242D31;
     margin-bottom: 20px;
     font-weight: bold;
 
-  }
-  
-  .banner__secondblock--secondparagraph {
+}
+
+.banner__secondblock--secondparagraph {
     margin-bottom: 20px;
     font-size: 18px;
-    font-family: Poppins;
     color: #647A81;
-  }
-.button__banner--pagedown{
-    background-color:#235565;
+}
+
+.button__banner--pagedown {
+    background-color: #235565;
     font-size: 15px;
     cursor: pointer;
     padding: 10px;
     color: white;
     border-radius: 5px;
 }
-.button__banner--tel{
-  cursor: pointer;
-  font-size: 15px;
-  text-decoration: none;
-  background-color: transparent;
-  color: #235565;
-  padding: 10px;
-  border: 1px solid #000;
-  border-radius: 5px;
-}
-.button__banner--tel:hover {
-  background: #235565 ;
-  color:white;
-  text-decoration: none;
 
+.button__banner--tel {
+    cursor: pointer;
+    font-size: 15px;
+    text-decoration: none;
+    background-color: transparent;
+    color: #235565;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
 }
+
+.button__banner--tel:hover {
+    background: #235565;
+    color: white;
+    text-decoration: none;
+}
+
 .button__banner--pagedown:hover {
-  background: lightblue;
+    background: lightblue;
 }
 
 @media screen and (max-width: 768px) {
     .banner__text {
         width: 50%;
-        text-align: left;
         padding: 20px;
+        text-align: center;
+        margin: auto;
+        overflow-wrap: normal;
+    }
+
+    .banner__paragraph {
+        color: white;
+    }
+
+    .banner__secondblock--heading {
+        font-size: 41px;
+        color: white;
+    }
+
+    .banner__secondblock--secondparagraph {
+        color: white;
+    }
+
+    .button__banner--tel {
+        color: white;
     }
 }
