--- a/css/common.css
+++ b/css/common.css
@@ -29,6 +29,7 @@
     --contacts-links: rgba(35, 85, 101);
     --footer-links-active: #235565;
     --footer-text: rgb(100, 122, 129);
+    --contacts-text: rgb(100, 122, 129);
     --footer-icon: #519ac9;
     --footer-icon-active: #3781b0;
     --footer-btn-up-bg: #fff;
