--- a/css/contacts.css
+++ b/css/contacts.css
@@ -15,9 +15,9 @@
   text-align: left;
 }
 .contacts__title {
-  font-size: 20px; 
+  font-size: 12px; 
   margin-bottom: 10px;
-  color: #519ac9
+  color: #519ac9;
 }
 
 
@@ -89,7 +89,8 @@
   font-size: 16px;
 }
 .contacts__mainquastion {
-  font-size: 32px;
+  font-size: 50px;
+  font-family: Signika, sans-serif;
 }
 .contacts__form-box-raq {
 border-radius: 5px;
