change color of border

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -107,7 +107,7 @@ max-width: 100%;
 .contacts .contacts__form-box-email:focus,
 .contacts .contacts__form-box-tel:focus,
 .contacts .contacts__form-box-name:focus {
-  border: 1px solid red;
+  border: 2px solid rgb(59, 153, 252);
   border-radius: 6px;
 }
 
@@ -151,6 +151,7 @@ max-width: 100%;
 .contacts .contacts__form-box-name::placeholder {
   color: black;
   opacity: 0.5;
+
 }
 @media (max-width: 992px) {
 .contacts__form-box {
