--- a/css/service-carousel.css
+++ b/css/service-carousel.css
@@ -1,6 +1,6 @@
 .carousel {
     max-width: 100%;
-    margin: auto;
+    margin: 0;
     position: relative;
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
